--- a/doc/nuhmssmnofvhimalaya.dox
+++ b/doc/nuhmssmnofvhimalaya.dox
@@ -18,6 +18,23 @@ shown in the following figure.
 
 \image html NUHMSSMNoFVHimalaya_tower.svg
 
+\subsection nuhmssmnofvhimalaya_build Building the NUHMSSMNoFVHimalaya
+
+In order to use the 3-loop contributions to the light CP-even Higgs
+mass from the <a href="https://github.com/Himalaya-Library">Himalaya
+library</a>, the NUHMSSMNoFVHimalaya must be configured with the
+`--enable-himalaya` flag:
+
+    ./createmodel --name=NUHMSSMNoFVHimalaya
+    ./configure --with-models=NUHMSSMNoFVHimalaya \
+        --enable-himalaya \
+        --with-himalaya-incdir=${HIMALAYA_DIR}/source/include \
+        --with-himalaya-libdir=${HIMALAYA_DIR}/build
+    make
+
+In the above example `HIMALAYA_DIR` is the path to the Himalaya
+directory.
+
 \subsection nuhmssmnofvhimalaya_input_parameters Input parameters
 
 NUHMSSMNoFVHimalaya takes the following physics parameters as input:
@@ -60,6 +77,87 @@ All MSSM parameters, except for \f$\tan\beta\f$, are defined in the
 \f$\overline{\text{DR}}\f$ scheme at the scale \f$M_{\text{SUSY}}\f$.
 \f$\tan\beta\f$ is defined in the \f$\overline{\text{DR}}\f$ scheme at
 the scale \f$M_Z\f$.
+
+\subsection nuhmssmnofvhimalaya_running Running the NUHMSSMNoFVHimalaya
+
+We recommend to run NUHMSSMNoFVHimalaya with the following
+configuration flags: In an SLHA input file we recommend to use:
+
+~~~~~~~~~~~~~~~~~~~~~~~{.txt}
+Block FlexibleSUSY
+    0   1.0e-05      # precision goal
+    1   0            # max. iterations (0 = automatic)
+    2   0            # algorithm (0 = all, 1 = two_scale, 2 = semi_analytic)
+    3   0            # calculate SM pole masses
+    4   3            # pole mass loop order
+    5   3            # EWSB loop order
+    6   3            # beta-functions loop order
+    7   2            # threshold corrections loop order
+    8   1            # Higgs 2-loop corrections O(alpha_t alpha_s)
+    9   1            # Higgs 2-loop corrections O(alpha_b alpha_s)
+   10   1            # Higgs 2-loop corrections O(alpha_t^2 + alpha_t alpha_b + alpha_b^2)
+   11   1            # Higgs 2-loop corrections O(alpha_tau^2)
+   12   0            # force output
+   13   1            # Top pole mass QCD corrections (0 = 1L, 1 = 2L, 2 = 3L)
+   14   1.0e-11      # beta-function zero threshold
+   15   0            # calculate observables (a_muon, ...)
+   16   0            # force positive majorana masses
+   17   0            # pole mass renormalization scale (0 = SUSY scale)
+   18   0            # pole mass renormalization scale in the EFT (0 = min(SUSY scale, Mt))
+   19   0            # EFT matching scale (0 = SUSY scale)
+   20   2            # EFT loop order for upwards matching
+   21   1            # EFT loop order for downwards matching
+   22   0            # EFT index of SM-like Higgs in the BSM model
+   23   1            # calculate BSM pole masses
+   24   122111221    # individual threshold correction loop orders
+   25   0            # ren. scheme for Higgs 3L corrections (0 = DR, 1 = MDR)
+   26   1            # Higgs 3-loop corrections O(alpha_t alpha_s^2)
+   27   1            # Higgs 3-loop corrections O(alpha_b alpha_s^2)
+   28   1            # Higgs 3-loop corrections O(alpha_t^2 alpha_s)
+   29   1            # Higgs 3-loop corrections O(alpha_t^3)
+   30   1            # Higgs 4-loop corrections O(alpha_t alpha_s^3)
+~~~~~~~~~~~~~~~~~~~~~~~
+
+In the Mathematica interface we recommend to use:
+
+~~~~~~~~~~~~~~~~~~~~~~~{.m}
+handle = FSNUHMSSMNoFVHimalayaOpenHandle[
+    fsSettings -> {
+        precisionGoal -> 1.*^-5,           (* FlexibleSUSY[0] *)
+        maxIterations -> 0,                (* FlexibleSUSY[1] *)
+        solver -> 0,                       (* FlexibleSUSY[2] *)
+        calculateStandardModelMasses -> 0, (* FlexibleSUSY[3] *)
+        poleMassLoopOrder -> 3,            (* FlexibleSUSY[4] *)
+        ewsbLoopOrder -> 3,                (* FlexibleSUSY[5] *)
+        betaFunctionLoopOrder -> 3,        (* FlexibleSUSY[6] *)
+        thresholdCorrectionsLoopOrder -> 2,(* FlexibleSUSY[7] *)
+        higgs2loopCorrectionAtAs -> 1,     (* FlexibleSUSY[8] *)
+        higgs2loopCorrectionAbAs -> 1,     (* FlexibleSUSY[9] *)
+        higgs2loopCorrectionAtAt -> 1,     (* FlexibleSUSY[10] *)
+        higgs2loopCorrectionAtauAtau -> 1, (* FlexibleSUSY[11] *)
+        forceOutput -> 0,                  (* FlexibleSUSY[12] *)
+        topPoleQCDCorrections -> 1,        (* FlexibleSUSY[13] *)
+        betaZeroThreshold -> 1.*^-11,      (* FlexibleSUSY[14] *)
+        forcePositiveMasses -> 0,          (* FlexibleSUSY[16] *)
+        poleMassScale -> 0,                (* FlexibleSUSY[17] *)
+        eftPoleMassScale -> 0,             (* FlexibleSUSY[18] *)
+        eftMatchingScale -> 0,             (* FlexibleSUSY[19] *)
+        eftMatchingLoopOrderUp -> 2,       (* FlexibleSUSY[20] *)
+        eftMatchingLoopOrderDown -> 1,     (* FlexibleSUSY[21] *)
+        eftHiggsIndex -> 0,                (* FlexibleSUSY[22] *)
+        calculateBSMMasses -> 1,           (* FlexibleSUSY[23] *)
+        thresholdCorrections -> 122111221, (* FlexibleSUSY[24] *)
+        higgs3loopCorrectionRenScheme -> 0,(* FlexibleSUSY[25] *)
+        higgs3loopCorrectionAtAsAs -> 1,   (* FlexibleSUSY[26] *)
+        higgs3loopCorrectionAbAsAs -> 1,   (* FlexibleSUSY[27] *)
+        higgs3loopCorrectionAtAtAs -> 1,   (* FlexibleSUSY[28] *)
+        higgs3loopCorrectionAtAtAt -> 1,   (* FlexibleSUSY[29] *)
+        higgs4loopCorrectionAtAsAsAs -> 1, (* FlexibleSUSY[30] *)
+        parameterOutputScale -> 0          (* MODSEL[12] *)
+    },
+    ...
+];
+~~~~~~~~~~~~~~~~~~~~~~~
 
 \subsubsection nuhmssmnofvhimalaya_uncertainty Uncertainty estimate of the predicted Higgs pole mass
 
